[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-budget-enforcer"
version = "0.2.1"
description = "Fixed-budget enforcement for Databricks on AWS: plan weekly spend from the AWS CUR and throttle compute to stay on pace for a fiscal-year budget."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tom Dennison" }]
keywords = ["databricks", "aws", "cur", "finops", "budget", "cost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
# Floors are deliberately low: inside a Databricks notebook the library must
# install on top of the runtime's preinstalled pandas/pyarrow/numpy without
# upgrading them (compiled packages in the base env break if pip drags in a
# new numpy major version).
dependencies = [
    "pandas>=1.5",
    "pyarrow>=8.0",
    "boto3>=1.28",
    "databricks-sdk>=0.20",
    "pydantic>=1.10",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
dbe = "databricks_budget_enforcer.cli:main"

[project.urls]
Homepage = "https://github.com/tomldennison/databricks-budget-enforcer"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_budget_enforcer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
